tests/pass/09_static_method_with_params.zn
foreign u0 printf(*char)

struct String {
    *char ptr
}

u0 String::print() {
    printf("String\n")
}

i32 main() {
    String::print()

    return 0
}
