tests/fail/06_unkown_static_call.zn
foreign u0 printf(*char)

struct Greeter {
    f32 p
}

i32 main() {
    Greeter::unkown()
    
    return 0
}
